feat: criando action do signUpCongratsFragment para signInFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,13 +37,17 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/signUpCongratsFragment"
         android:name="br.com.passwordkeeper.presentation.ui.fragment.SignUpCongratsFragment"
         android:label="SignUpCongratsFragment"
-        tools:layout="@layout/sign_up_congrats_fragment"/>
+        tools:layout="@layout/sign_up_congrats_fragment">
+        <action
+            android:id="@+id/action_signUpCongratsFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="br.com.passwordkeeper.presentation.ui.fragment.HomeFragment"
