--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tiPassword" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/mbSignUp"
+        android:id="@+id/materialButtonSignUp"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
@@ -146,7 +146,7 @@
         android:textColor="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mbSignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/materialButtonSignUp" />
 
     <View
         android:id="@+id/viewLeft"
@@ -158,7 +158,7 @@
         android:background="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/tvOr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mbSignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/materialButtonSignUp" />
 
     <View
         android:id="@+id/viewRight"
@@ -170,7 +170,7 @@
         android:background="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvOr"
-        app:layout_constraintTop_toBottomOf="@id/mbSignUp" />
+        app:layout_constraintTop_toBottomOf="@id/materialButtonSignUp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/mbGoogle"
