--- a/app/src/main/res/layout/sign_up_congrats_fragment.xml
+++ b/app/src/main/res/layout/sign_up_congrats_fragment.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewSignUpSubtitleCongrats"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/mbSignUp"
+        android:id="@+id/materialButtonProceed"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
