fix: colocando animação no layout do signUpCongrats

--- a/app/src/main/res/layout/sign_up_congrats_fragment.xml
+++ b/app/src/main/res/layout/sign_up_congrats_fragment.xml
@@ -34,12 +34,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitleCongrats" />
 
-    <ImageView
-        android:id="@+id/imageViewCongrats"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation"
         android:layout_width="170dp"
         android:layout_height="170dp"
+        app:lottie_rawRes="@raw/animation"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:scaleX="3"
+        android:scaleY="3"
         android:layout_marginTop="100dp"
-        android:src="@drawable/ic_congrats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewSignUpSubtitleCongrats"/>
@@ -57,6 +61,6 @@
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewCongrats" />
+        app:layout_constraintTop_toBottomOf="@+id/animation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
