--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -51,7 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="460dp"
         android:background="@drawable/background_rounded_tops"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiEmail"
@@ -107,6 +109,18 @@
             android:inputType="textPassword"
              />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBarSignIn"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="25dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:visibility="gone"
+        android:elevation="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/mbSignIn"
+        app:layout_constraintStart_toStartOf="@+id/mbSignIn"
+        app:layout_constraintTop_toTopOf="@+id/mbSignIn" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/mbSignIn"
