feat: criando layout de novo cartão

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_icon_home"
+        android:title="@string/home"
+        android:icon="@drawable/ic_home" />
+    <item
         android:id="@+id/menu_icon_new_note"
-        android:title="@string/new_note"
+        android:title="@string/new_card"
         android:icon="@drawable/ic_new_note" />
     <item
         android:id="@+id/menu_icon_settings"
