--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -55,7 +55,19 @@
         <argument
             android:name="userView"
             app:argType="br.com.passwordkeeper.domain.model.UserView" />
+        <action
+            android:id="@+id/action_homeFragment_to_formCardFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:destination="@id/formCardFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/formCardFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.FormCardFragment"
+        android:label="FormCardFragment"
+        tools:layout="@layout/form_card_fragment"/>
 
 
 </navigation>
