--- a/app/src/main/res/layout/item_image_favorite.xml
+++ b/app/src/main/res/layout/item_image_favorite.xml
@@ -48,7 +48,7 @@
             tools:text="@string/text_type" />
 
         <TextView
-            android:id="@+id/textViewData"
+            android:id="@+id/textViewDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
