fix: correção de bug na tela de signIn

--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scrowViewSignUp"
+    android:id="@+id/scrollViewSignUp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple">
@@ -40,12 +40,14 @@
         <ImageView
             android:id="@+id/imageViewSignUp"
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginEnd="50dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="40dp"
             android:contentDescription="@string/image_description"
             android:src="@drawable/ic_app"
+            app:layout_constraintBottom_toTopOf="@id/constraintLayoutSignUp2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/textViewSignUpTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViewSignUpSubtitle"
